terminando de mudar

--- a/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/FXMLMenuProduto.fxml
+++ b/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/FXMLMenuProduto.fxml
@@ -77,7 +77,7 @@
       						<String fx:value="DWORNavigationMenuButton" />
       					</styleClass>
       				</JFXButton>
-            <JFXButton id="NavigationMenuButton" maxWidth="1.7976931348623157E308" text="Relatorios" textAlignment="CENTER" wrapText="true">
+            <JFXButton id="NavigationMenuButton" maxWidth="1.7976931348623157E308" onAction="#actRelatorio" text="Relatorios" textAlignment="CENTER" wrapText="true">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
