--- a/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/FXMLMenuProduto.fxml
+++ b/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/FXMLMenuProduto.fxml
@@ -41,6 +41,15 @@
                   <String fx:value="DWORNavigationMenuButton" />
                </styleClass>
             </JFXButton>
+      				<JFXButton id="NavigationMenuButton" fx:id="btnPedirProduto" maxWidth="1.7976931348623157E308" onAction="#actPedirProduto" text="Comprar" HBox.hgrow="ALWAYS">
+      					<font>
+      						<Font name="System Bold" size="13.0" />
+      					</font>
+      					<styleClass>
+      						<String fx:value="DWORNavigationMenu" />
+      						<String fx:value="DWORNavigationMenuButton" />
+      					</styleClass>
+      				</JFXButton>
             <JFXButton id="NavigationMenuButton" fx:id="btnCadastroEmprestar" maxWidth="1.7976931348623157E308" onAction="#actCadastroEmprestar" text="Emprestar" textAlignment="CENTER" wrapText="true" HBox.hgrow="ALWAYS">
                <font>
                   <Font name="System Bold" size="13.0" />
@@ -50,15 +59,6 @@
                   <String fx:value="DWORNavigationMenuButton" />
                </styleClass>
             </JFXButton>
-      				<JFXButton id="NavigationMenuButton" fx:id="btnPedirProduto" maxWidth="1.7976931348623157E308" onAction="#actPedirProduto" text="Pedir" HBox.hgrow="ALWAYS">
-      					<font>
-      						<Font name="System Bold" size="13.0" />
-      					</font>
-      					<styleClass>
-      						<String fx:value="DWORNavigationMenu" />
-      						<String fx:value="DWORNavigationMenuButton" />
-      					</styleClass>
-      				</JFXButton>
       				<JFXButton id="NavigationMenuButton" fx:id="btnReceberProduto" maxWidth="1.7976931348623157E308" onAction="#actReceberProduto" text="Receber" HBox.hgrow="ALWAYS">
       					<font>
       						<Font name="System Bold" size="13.0" />
