--- a/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/RelatorioFXML.fxml
+++ b/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/RelatorioFXML.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<StackPane alignment="TOP_RIGHT" maxHeight="630.0" minHeight="630.0" prefHeight="630.0" prefWidth="918.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.maplebearsystem.view.FXMLRelatorioController">
+<StackPane fx:id="rootpane" alignment="TOP_RIGHT" maxHeight="630.0" minHeight="630.0" prefHeight="630.0" prefWidth="918.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.maplebearsystem.view.FXMLRelatorioController">
    <children>
       <VBox fx:id="vboxRelatorio" prefHeight="500.0" prefWidth="918.0" styleClass="branco" stylesheets="@FXMLStylesheet.css">
          <children>
