--- a/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/component/FXMLContactSearch.fxml
+++ b/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/component/FXMLContactSearch.fxml
@@ -17,7 +17,7 @@
    <children>
       <VBox fx:id="primaryPane" minWidth="690.0" spacing="14.0" styleClass="DWORDefaultFormBackground">
          <children>
-            <Label styleClass="DWORScreenTitleII" text="Busca de Contatos" />
+            <Label styleClass="DWORScreenTitleII" text="Busca de Pessoa" />
             <HBox alignment="CENTER" spacing="15.0">
                <children>
                   <JFXTextField fx:id="tfieldSearch" labelFloat="true" onAction="#actSPSearch" prefHeight="30.0" promptText="Insira o termo de busca" HBox.hgrow="ALWAYS">
