--- a/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/component/FXMLFuncionariosSearch.fxml
+++ b/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/component/FXMLFuncionariosSearch.fxml
@@ -17,7 +17,7 @@
    <children>
       <VBox minWidth="690.0" spacing="14.0" styleClass="DWORDefaultFormBackground" stylesheets="@../FXMLStylesheet.css">
          <children>
-            <Label styleClass="DWORScreenTitleII" text="Busca de Fornecedor" />
+            <Label styleClass="DWORScreenTitleII" text="Busca de Funcionarios" />
             <HBox alignment="CENTER" spacing="15.0">
                <children>
                   <JFXTextField fx:id="tfieldSearch" labelFloat="true" onAction="#actSPSearch" prefHeight="30.0" promptText="Insira o termo de busca" HBox.hgrow="ALWAYS">
