--- a/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/component/FXMLInteressadosSearch.fxml
+++ b/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/component/FXMLInteressadosSearch.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXDatePicker?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import java.lang.String?>
@@ -22,6 +23,8 @@
                   <Insets />
                </HBox.margin>
             </JFXTextField>
+            <JFXDatePicker fx:id="tfieldData1" onAction="#actSPSearch" prefHeight="32.0" prefWidth="171.0" />
+            <JFXDatePicker fx:id="tfieldData2" onAction="#actSPSearch" prefHeight="31.0" prefWidth="171.0" />
             <JFXButton fx:id="btnSearch" buttonType="RAISED" onAction="#actSPSearch" prefHeight="45.0" ripplerFill="#282a2f" text="Busca">
                <HBox.margin>
                   <Insets />
