--- a/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/FXMLRestricao.fxml
+++ b/MapleBearSystem/src/main/resources/br/com/maplebearsystem/view/FXMLRestricao.fxml
@@ -93,15 +93,18 @@
                                                    <children>
                                                       <VBox spacing="10.0" VBox.vgrow="ALWAYS">
                                                          <children>
-                                                            <TableView fx:id="tviewAlimento" editable="true" onMouseClicked="#alteraalimento" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+                                                            <TableView fx:id="tviewAlimento" editable="true" onMouseClicked="#alteraalimento" prefWidth="200.0" VBox.vgrow="ALWAYS">
                                                               <columns>
-                                                                <TableColumn fx:id="colAlimento" maxWidth="1.7976931348623157E308" minWidth="350.0" prefWidth="-1.0" text="Alimento" />
-                                                                  <TableColumn fx:id="colGravidadeAlimento" maxWidth="-1.0" minWidth="145.0" prefWidth="-1.0" text="Gravidade" />
-                                                                  <TableColumn fx:id="colperiodoalimento" maxWidth="-1.0" minWidth="145.0" prefWidth="-1.0" text="Periodo" />
+                                                                <TableColumn fx:id="colAlimento" maxWidth="1.7976931348623157E308" minWidth="298.0" prefWidth="298.0" text="Alimento" />
+                                                                  <TableColumn fx:id="colGravidadeAlimento" maxWidth="229.0" minWidth="131.0" prefWidth="204.0" text="Gravidade" />
+                                                                  <TableColumn fx:id="colperiodoalimento" maxWidth="243.0" minWidth="145.0" prefWidth="186.0" text="Periodo" />
                                                               </columns>
                                                                <VBox.margin>
                                                                   <Insets top="5.0" />
                                                                </VBox.margin>
+                                                               <columnResizePolicy>
+                                                                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                                               </columnResizePolicy>
                                                             </TableView>
                                                             <HBox fx:id="Hali" alignment="CENTER" prefHeight="184.0" prefWidth="690.0" spacing="15.0" style="-fx-border-color: lightgrey;" VBox.vgrow="ALWAYS">
                                                                <children>
